@@ -1,4 +1,4 @@
-// Copyright © 2004, 2024, Oracle and/or its affiliates.
+﻿// Copyright © 2024, Oracle and/or its affiliates.
 //
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License, version 2.0, as
@@ -40,7 +40,19 @@ using System.Resources;
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
 
-[assembly: AssemblyVersion("9.2.0")]
-[assembly: AssemblyInformationalVersion("9.2.0.0")]
-[assembly: AssemblyFileVersion("9.2.0.0")]
+#if NET6_0
+[assembly: AssemblyVersion("6.0.33")]
+[assembly: AssemblyInformationalVersion("6.0.33.0+MySQL9.2.0")]
+[assembly: AssemblyFileVersion("6.0.33.0")]
 [assembly: NeutralResourcesLanguage("en-US")]
+#elif NET8_0
+[assembly: AssemblyVersion("8.0.8")]
+[assembly: AssemblyInformationalVersion("8.0.8.0+MySQL9.2.0")]
+[assembly: AssemblyFileVersion("8.0.8.0")]
+[assembly: NeutralResourcesLanguage("en-US")]
+#elif NET9_0
+[assembly: AssemblyVersion("9.0.0")]
+[assembly: AssemblyInformationalVersion("9.0.0.0-preview+MySQL9.2.0")]
+[assembly: AssemblyFileVersion("9.0.0.0")]
+[assembly: NeutralResourcesLanguage("en-US")]
+#endif
