@@ -1,4 +1,4 @@
-// Copyright © 2004, 2024, Oracle and/or its affiliates.
+﻿// Copyright © 2024, Oracle and/or its affiliates.
 //
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License, version 2.0, as
